--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,5 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+<fragment
+    android:id="@+id/list_fragment"
+    android:name="com.bignerdranch.android.mycourse.CourseListFragment"
+    tools:layout="@layout/course_list_fragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 
 </FrameLayout>
