--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -12,8 +12,15 @@
         android:id="@+id/list_fragment"
         android:name="com.bignerdranch.android.mycourse.CourseListFragment"
         tools:layout="@layout/course_list_fragment"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="match_parent"/>
+
+    <FrameLayout
+        android:id="@+id/detail_container"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
 
     <!--<TextView
         android:id="@+id/my_text"
