--- a/app/src/main/res/layout/course_detail_fragment.xml
+++ b/app/src/main/res/layout/course_detail_fragment.xml
@@ -10,7 +10,25 @@
     tools:context=".CourseDetailActivity">
 
     <TextView
-
+        android:id="@+id/detail_course_name"
+        android:text="Course Name"
+        android:layout_marginBottom="20dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:id="@+id/detail_course_image"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/fifthcourse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/detail_course_description"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
