--- a/app/src/main/res/layout/course_detail_fragment.xml
+++ b/app/src/main/res/layout/course_detail_fragment.xml
@@ -5,6 +5,7 @@
     android:layout_gravity="center_horizontal"
     android:paddingTop="10dp"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CourseDetailActivity">
@@ -28,6 +29,7 @@
     <TextView
         android:id="@+id/detail_course_description"
         android:layout_gravity="center_horizontal"
+        android:text="Description goes here"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
